2010-02-18  Uros Bizjak  <ubizjak@gmail.com>

	* configure.ac (gnu-unique-object): Wrap regexps using [] in
	changequote block.
	(__stack_chk_fail): Ditto.  Remove quadrigraphs.
	* configure: Regenerated.

2010-02-18  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu-c.c (spu_resolve_overloaded_builtin): Call
	lang_hooks.types_compatible_p instead of comptypes.

2010-02-18  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* config/arm/lib1funcs.asm (__prefer_thumb__): New define.
	(udivsi3, aeabi_uidivmod, divsi3, aeabi_idivmod): Use Thumb-1 variant
	if __prefer_thumb__ is defined.

2010-02-18  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/43066
	* tree-sra.c (build_ref_for_offset_1): Return false on encountering an
	array with zero-sized element type.

2010-02-18  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (add_var_loc_to_decl): Change last argument to
	rtx, allocate struct var_loc_node here and return it to the
	caller, and only if it is actually needed.
	(dwarf2out_var_location): Adjust add_var_loc_to_decl caller,
	move it earlier and return immediately if it returns NULL.

2010-02-17  Mikael Pettersson  <mikpe@it.uu.se>

	* config/sparc/gas.h: New file.  Restore
	TARGET_ASM_NAMED_SECTION to its ELF default.
	* config/sparc/sysv4.h (TARGET_ASM_NAMED_SECTION): Do not
	check !HAVE_GNU_AS.
	* config/sparc/sparc.c (sparc_elf_asm_named_section):
	Likewise.  Add ATTRIBUTE_UNUSED to prototype.
	* config.gcc (sparc*-*-linux*): Include sparc/gas.h
	after sparc/sysv4.h.

2010-02-17  Dave Korn  <dave.korn.cygwin@gmail.com>

	* config/i386/mingw32.h (LIBGCJ_SONAME): Fix cut'n'pasto in DLL name.

2010-02-17  Steven Bosscher  <steven@gcc.gnu.org>

	* gensupport.c (process_one_cond_exec): Derive name for COND_EXEC
	patterns from predicated pattern.

2010-02-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43103
	* config/i386/sse.md (xop_vpermil2<mode>3): Use avxmodesuffixf2c
	for insn mnemonic suffix.
